@@ -31,8 +31,9 @@
     <modules>
         <module>univocity-trader-core</module>
         <module>univocity-trader-binance</module>
+        <module>univocity-trader-binance-futures</module>
         <module>univocity-trader-iqfeed</module>
-        <module>univocity-trader-interactivebrokers</module>
+<!--        <module>univocity-trader-interactivebrokers</module>-->
         <module>univocity-trader-examples</module>
         <module>univocity-trader-chart</module>
     </modules>
@@ -94,9 +95,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <source>11</source>
+                    <target>11</target>
+                    <parameters>true</parameters>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
             </plugin>
             <plugin>
@@ -113,7 +117,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>11</version>
+                                    <version>14</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -139,10 +143,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
                 <configuration>
                     <forkCount>0</forkCount>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <argLine>-Dfile.encoding=UTF-8 --enable-preview</argLine>
                     <includes>
                         <include>**/*.java</include>
                     </includes>
@@ -234,7 +237,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
